[package]
name = "arti-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arti-client = "0.42.0"
bb8 = "0.9.1"
fast-socks5 = "1.0.0"
tokio = { version = "1.52.3", features = ["full"] }
tor-rtcompat = "0.42.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
